# broad-crm

./: .env.example  .gitattributes  .gitignore
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_servers.py  0002_create_ai_keys.py  0003_add_position.py  0004_create_notifier_state.py  0005_create_notifier_alert_log.py  0006_create_proxies.py  0007_create_backends.py  0008_create_users_roles.py  0009_create_teams.py  0010_add_user_email.py  0011_user_passwordless_telegram.py  0012_teams_optional_leader.py  0013_backends_alert_grace.py  0014_proxies_alert_grace.py  0015_user_first_login.py  0016_backfill_team_leaders.py  0017_create_sms_module.py  0018_teams_mail_group_id.py  0019_backends_relations_secrets.py  0020_backends_domain_canon.py  0021_create_mail_module.py  0022_create_mail_sent_messages.py  0023_mail_tags_drop_is_builtin.py  0024_mail_accounts_number_app_name.py  0025_mail_message_reads.py  0026_users_is_system.py  0027_user_channel_teams.py  0028_mail_dedup_orphan_cleanup.py  0029_document_nodes.py  0030_document_node_roles.py  0031_servers_ssh_key_auth.py  0032_document_attachments.py  0033_document_nodes_rag_exclude.py
backend/ansible/: install_node_exporter.yml
backend/app/: __init__.py  config.py  db.py  errors.py  logging.py  main.py
backend/app/api/: __init__.py  ai_keys.py  auth.py  backend_users.py  backends.py  deps.py  documents.py  documents_external.py  health.py  mail.py  mail_ingest.py  mail_me.py  mail_telegram.py  permissions.py  proxies.py  roles.py  router.py  servers.py  sms.py  sms_webhooks.py  teams.py  users.py
backend/scripts/: migrate_mail_data.py
backend/tests/: conftest.py  mail_transport_helpers.py  ssh_key_helpers.py
(+648 files in other folders)
