[project]
name = "crm-backend"
version = "0.1.0"
description = "CRM — мониторинг серверов (Этап 1): backend (FastAPI)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "pyjwt>=2.10,<3.0",
    "cryptography>=43,<44",
    "bcrypt>=4.2,<4.3",
    "ansible-runner>=2.4,<2.5",
    "ansible-core>=2.17,<2.18",
    "httpx[socks]>=0.27,<0.28",
    "structlog>=24,<25",
    "twilio>=9.3,<10",
    "python-multipart>=0.0.12,<0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<1.14",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5,<6",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]
# RUF001/002/003 — «ambiguous unicode»: ложные срабатывания на русских текстах
# (docs/комментарии на русском по правилам проекта). Отключены осознанно.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501"]
# Побуквенный порт SQL движка тегов из mail-агрегатора (ADR-044 §5): длинные строки
# регекс-предиката НЕ переносятся (иначе рушится byte-for-byte эквивалентность).
"app/domain/mail_tags_sql.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
